# actor

./: .cppcheck-suppressions  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  README.md  actor.podspec.json  configure  mtl.podspec  mtl.podspec.json
examples/apps/: CMakeLists.txt
examples/apps/httpd/: CMakeLists.txt  main.cc
examples/apps/io_tester/: CMakeLists.txt  conf.yaml  io_tester.cc
examples/apps/iotune/: CMakeLists.txt  iotune.cc
examples/apps/lib/: stop_signal.hh
examples/apps/memcached/: CMakeLists.txt  ascii.hh  ascii.rl  memcache.cc  memcached.hh
examples/apps/memcached/tests/: CMakeLists.txt  test.py  test_ascii_parser.cc  test_memcached.py
examples/apps/seawreck/: CMakeLists.txt  seawreck.cc
examples/apps/simple_actor/: main.cpp  simple_actor.cpp  simple_actor.hpp
examples/apps/simple_cluster_actor/: main.cpp  simple_actor.cpp  simple_actor.hpp
examples/apps/stateless_worker/: main.cpp
libs/cluster/: CMakeLists.txt  README.md
libs/cluster/include/nil/actor/: actor.hpp  actor_ref.hpp  message_deduplicate.hpp  utility.hpp
libs/cluster/include/nil/actor/cluster/: cluster.hpp
libs/cluster/include/nil/actor/detail/: actor_ref_impl.hpp  actor_traits.hpp  arguments_vector.hpp  directory.hpp  macro.hpp  message_identifier.hpp
libs/cluster/src/: cluster.cpp  handshake.cpp  membership.cpp  node.cpp  server.cpp
libs/cluster/test/: CMakeLists.txt  actor_keys.cpp  error_handling.cpp  local_actor.cpp  message_deduplication.cpp  message_passing.cpp
libs/io/: CMakeLists.txt
libs/io/include/nil/actor/detail/: call_cfun.hpp  socket_guard.hpp
libs/io/include/nil/actor/io/: abstract_broker.hpp  accept_handle.hpp  all.hpp  basp_broker.hpp  broker.hpp  broker_servant.hpp  close.hpp  connect.hpp  connection_handle.hpp  connection_helper.hpp  datagram_handle.hpp  datagram_servant.hpp  doorman.hpp  fwd.hpp  handle.hpp  middleman.hpp  middleman_actor.hpp  middleman_actor_impl.hpp  open.hpp  publish.hpp  publish_local_groups.hpp  receive_policy.hpp  remote_actor.hpp  remote_group.hpp  scribe.hpp  system_messages.hpp  typed_broker.hpp
libs/io/include/nil/actor/policy/: tcp.hpp  udp.hpp
libs/io/include/nil/mtl/detail/: call_cfun.hpp  socket_guard.hpp
libs/io/include/nil/mtl/io/: abstract_broker.hpp  accept_handle.hpp  all.hpp  basp_broker.hpp  broker.hpp  broker_servant.hpp  close.hpp  connect.hpp  connection_handle.hpp  connection_helper.hpp  datagram_handle.hpp  datagram_servant.hpp  doorman.hpp  fwd.hpp  handle.hpp  middleman.hpp  middleman_actor.hpp  middleman_actor_impl.hpp  open.hpp  publish.hpp  receive_policy.hpp  remote_actor.hpp  remote_group.hpp  scribe.hpp  system_messages.hpp  typed_broker.hpp  unpublish.hpp
libs/io/include/nil/mtl/policy/: tcp.hpp  udp.hpp
libs/io/src/: abstract_broker.cpp  acceptor_manager.cpp  basp_broker.cpp  broker.cpp  connection_helper.cpp  datagram_manager.cpp  datagram_servant.cpp  datagram_servant_impl.cpp  default_multiplexer.cpp  doorman.cpp  doorman_impl.cpp  header.cpp  instance.cpp  interfaces.cpp  ip_endpoint.cpp  manager.cpp  message_queue.cpp  middleman.cpp  middleman_actor.cpp  middleman_actor_impl.cpp  multiplexer.cpp  native_socket.cpp  pipe_reader.cpp  receive_buffer.cpp  scribe.cpp  socket_guard.cpp  stream.cpp  tcp.cpp  test_multiplexer.cpp  udp.cpp
libs/io/src/basp/: basp_broker.cpp  instance.cpp  message_queue.cpp  message_type.cpp  routing_table.cpp  worker.cpp
libs/io/src/network/: acceptor.cpp  acceptor_manager.cpp  asio_multiplexer.cpp  datagram_handler.cpp  datagram_manager.cpp  datagram_servant_impl.cpp  default_multiplexer.cpp  doorman_impl.cpp  event_handler.cpp  ip_endpoint.cpp  manager.cpp  multiplexer.cpp  native_socket.cpp  pipe_reader.cpp  protocol.cpp  receive_buffer.cpp  scribe_impl.cpp  stream.cpp  stream_manager.cpp  test_multiplexer.cpp
libs/io/test/: CMakeLists.txt  automatic_connection.cpp  basp.cpp  basp_broker.cpp  basp_udp.cpp  default_multiplexer.cpp  dynamic_broker.cpp  http_broker.cpp  ip_endpoint.cpp  receive_buffer.cpp  remote_actor.cpp  remote_actor_udp.cpp  remote_group.cpp  remote_spawn.cpp  triggering.cpp  typed_broker.cpp  typed_remote_actor.cpp  unpublish.cpp
libs/network/: CMakeLists.txt
libs/network/include/nil/mtl/detail/: convert_ip_endpoint.hpp  net_syscall.hpp  (+3 more)
libs/network/src/: actor_proxy_impl.cpp  application.cpp  convert_ip_endpoint.cpp  datagram_socket.cpp  defaults.cpp  endpoint_manager.cpp  header.cpp  host.cpp  ip.cpp  message_queue.cpp  multiplexer.cpp  network_socket.cpp  pipe_socket.cpp  pollset_updater.cpp  socket.cpp  socket_manager.cpp  stream_socket.cpp  tcp_accept_socket.cpp  tcp_stream_socket.cpp  udp_datagram_socket.cpp  worker.cpp
libs/network/src/basp/: connection_state_strings.cpp  ec_strings.cpp  message_type_strings.cpp  operation_strings.cpp
libs/network/src/network/: endpoint_manager_queue.cpp  middleman.cpp  middleman_backend.cpp  packet_writer.cpp
libs/network/src/network/backend/: test.cpp
libs/network/test/: accept_socket.cpp  application.cpp  convert_ip_endpoint.cpp  datagram_socket.cpp  datagram_transport.cpp  doorman.cpp  endpoint_manager.cpp  header.cpp  ip.cpp  multiplexer.cpp  network_socket.cpp  pipe_socket.cpp  socket.cpp  socket_guard.cpp  stream_application.cpp  stream_socket.cpp  stream_transport.cpp  string_application.cpp  tcp_sockets.cpp  transport_worker.cpp  transport_worker_dispatcher.cpp  udp_datagram_socket.cpp
libs/network/test/net/basp/: message_queue.cpp  ping_pong.cpp  worker.cpp
libs/opencl/: CMakeLists.txt  README.md
libs/opencl/examples/: CMakeLists.txt  proper_matrix.cpp  scan.cpp  simple_matrix.cpp
libs/opencl/src/: device.cpp  global.cpp  manager.cpp  opencl_err.cpp  platform.cpp  program.cpp
libs/opencl/test/: CMakeLists.txt  opencl.cpp
libs/openssl/: CMakeLists.txt
libs/openssl/src/: manager.cpp  middleman_actor.cpp  publish.cpp  remote_actor.cpp  session.cpp
libs/openssl/test/: CMakeLists.txt  authentication.cpp  remote_actor.cpp
libs/python/: CMakeLists.txt
libs/python/src/: main.cpp
tools/: CMakeLists.txt  mtl-run.cpp  mtl-vec.cpp
(+922 files in other folders)
